src/test/deca/syntax/invalid/custom/primary_expr_ident.deca


{
bonjour (1, 2, 3;
}